# Dio_LuizaLabs

01_primeiros_passos_python/01_conhecendo_a_linguagem/: 01_tipos_de_dados.py  02_variaveis_e_constantes.py  03_conversao_de_tipos.py  04_funcoes_entrada_saida.py
01_primeiros_passos_python/02_tipos_de_operadores/: tipos_de_operadores.py
01_primeiros_passos_python/03_estruras_condicionais_e_repeticao/: estruturas_condicionais_e_repeticao.py
01_primeiros_passos_python/04_manipulando_strings/: manipulando_strings.py
01_primeiros_passos_python/05_trabalhando_com_listas/: 01_listas.py  02_metodos_da_classe_list.py
01_primeiros_passos_python/06_conhecendo_tuplas/: tuplas.py
01_primeiros_passos_python/07_dicionarios/: 01_dicionarios.py  02_metodos.py
02_dominando_funcoes_e_boas_praticas/01_funcoes/: 01_funcoes.py  (+1 more)
04_fundamentos_APIrest_fastAPI/05_lab/workout-api/: README.md  docker-compose.yml  pyproject.toml
04_fundamentos_APIrest_fastAPI/05_lab/workout-api/src/: main.py  routers.py
04_fundamentos_APIrest_fastAPI/05_lab/workout-api/src/atleta/: controller.py  models.py  schemas.py
04_fundamentos_APIrest_fastAPI/05_lab/workout-api/src/categorias/: controller.py  models.py  schemas.py
04_fundamentos_APIrest_fastAPI/05_lab/workout-api/src/centro_treinamento/: controller.py  models.py  schemas.py
04_fundamentos_APIrest_fastAPI/05_lab/workout-api/src/config/: database.py  settings.py
04_fundamentos_APIrest_fastAPI/05_lab/workout-api/src/contrib/: schemas.py
04_fundamentos_APIrest_fastAPI/05_lab/workout-api/src/contrib/repository/: dependencies.py
(+50 files in other folders)
